<resources>
    <string name="app_name">Arcade Mania</string>

    <string name="profile_form">Profile Form</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="user_text">User</string>
    <string name="create_profile">Create Profile</string>
    <string name="signUp">Sign Up</string>
    <string name="game_count_format">%1$d Games</string>
    <string name="required">Required</string>
    <string name="game_name">Game Name</string>
    <string name="image_logo">Image Logo</string>
    <string name="game_title">Game Title</string>
    <string name="game_list">Game List</string>
    <string name="settings_button_description">Settings Button Description</string>
    <string name="background_image_description">Top Background Image</string>
    <string name="settings_title">Settings</string>
    <string name="graphics_quality">Graphics Quality</string>
    <string name="sound_and_music">Sound &amp; Music</string>
    <string name="security_and_privacy">Security &amp; Privacy</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="font_size_and_style">Font Size and Style</string>
    <string name="right_arrow_image">Right Arrow</string>
    <string name="back">Back</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="dark_menu_title">Dark Menu</string>
    <string name="background_music_title">Background Music</string>
    <string name="private_account_title">Private Account</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="welcome">Welcome</string>
    <string name="arcadeMachineImageDescription">Arcade Machine Logo</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="profile_image">Profile Image</string>
    <string name="background_image_bubbles">Background Image Bubbles</string>
    <string name="birthday_title1">Birthday:</string>
    <string name="country_title1">Country:</string>
    <string name="mobile_title1">Mobile:</string>
    <string name="post_code_title1">Post Code:</string>
    <string name="birthday_title2">Date Of Birthday</string>
    <string name="country_title2">Country</string>
    <string name="mobile_title2">Mobile</string>
    <string name="post_code_title2">Post Code</string>

</resources>