<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Add the title TextView -->

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/profile_form"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/create_profile_person_upload_image"
                android:layout_gravity="center_horizontal"
                android:background="#C9756D6D"
                android:layout_marginTop="20dp"
                android:contentDescription="Upload Profile Image"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">

                <!-- TextInputLayout for Name -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/create_profile_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout for Surname -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/surname"
                    app:startIconDrawable="@drawable/create_profile_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- TextInputLayout for Email -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:placeholderText="email@gmail.com"
                app:startIconDrawable="@drawable/create_profile_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Birthday Date -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:hint="@string/birthday_title2"
                app:startIconDrawable="@drawable/baseline_birthday_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Country -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_title2"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/create_profile_country">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Mobile -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:hint="@string/mobile_title2"
                app:startIconDrawable="@drawable/create_profile_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:digits="0123456789+-"
                    android:maxLength="15"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for PostCode -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:hint="@string/post_code_title2"
                app:startIconDrawable="@drawable/create_profile_post_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPostCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/create_profile_upload_photo"
        android:backgroundTint="@color/colorPrimaryDark"
        android:tint="@color/white"
        app:layout_anchor="@id/uploadImage"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>